fixed file names

--- a/Selection Sort/selection.html
+++ b/Selection Sort/selection.html
@@ -2,7 +2,7 @@
 
     <header>
         <title>Selection Sort</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="selection_style.css" />
     </header>
 
     <body>
@@ -26,5 +26,5 @@
         </button>
     </body>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="selection_script.js"></script>
 </html>
