added ability to pause and play sorting

--- a/Selection Sort/selection.html
+++ b/Selection Sort/selection.html
@@ -14,7 +14,9 @@
         This is a visualization of a selection sort.
         </p>
         <div id="elements">
-        <p class="element" id="placeholder"></p>
+            <div class="element" id="placeholder">
+                <p></p>
+            </div>
         </div>
 
         <button id="startButton">
