--- a/Selection Sort/selection.html
+++ b/Selection Sort/selection.html
@@ -13,6 +13,10 @@
         <p>
         This is a visualization of a selection sort.
         </p>
+        <div class="slideContainer">
+            <input type="range" min="1" max="200" value="50" class="slider" id="myRange">
+            <p id="sliderValue">50</p>
+        </div>
         <div id="elements">
             <div class="element" id="placeholder">
                 <p></p>
