small display addition

--- a/Selection Sort/selection.html
+++ b/Selection Sort/selection.html
@@ -14,8 +14,9 @@
         This is a visualization of a selection sort.
         </p>
         <div class="slideContainer">
+            <p>Speed: </p>
             <input type="range" min="1" max="200" value="50" class="slider" id="myRange">
-            <p id="sliderValue">50</p>
+            <p>50</p>
         </div>
         <div id="elements">
             <div class="element" id="placeholder">
